ID-4687 : fix column/wrapping issue for PID Device & Pairing Disallowed Devices display

--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -882,7 +882,7 @@
 					overflow-y: scroll;
 					padding-left: 10px;
 					label {
-						width: 230px;
+						width: 220px;
 						margin-bottom: 10px;
 						text-transform: none;
 						&.input-checkbox {
